--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [tool.poetry]
-name = "fine-tuning"
+name = "impersonate-gpt"
 version = "0.1.0"
 description = ""
 authors = ["Justin Pyron <justinpyron@gmail.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -15,10 +16,8 @@ ipykernel = "^6.29.5"
 seaborn = "^0.13.2"
 transformers = "^4.47.1"
 tokenizers = "^0.21.0"
-accelerate = "^1.2.1"
-evaluate = "^0.4.3"
 pre-commit = "^4.0.1"
-mlflow = "^2.19.0"
+streamlit = "^1.41.1"
 
 
 [build-system]
