--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ transformers = "^4.47.1"
 tokenizers = "^0.21.0"
 pre-commit = "^4.0.1"
 streamlit = "^1.41.1"
+flask = "^3.1.0"
 
 
 [build-system]
