--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ tokenizers = "^0.21.0"
 pre-commit = "^4.0.1"
 streamlit = "^1.41.1"
 flask = "^3.1.0"
+huggingface-hub = "<1.0"
 
 
 [build-system]
